Updated fromscratch docs.

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -4,6 +4,11 @@
 	}
 }
 
+/* Fixes overflow from align math environments */
+.math-wrapper {
+    overflow-x: visible;
+}
+
 /* Add a line break between the arguments of each function.
    Taken from: https://github.com/sphinx-doc/sphinx/issues/1514#issuecomment-742703082
 */
