--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -12,7 +12,7 @@
 /* Add a line break between the arguments of each function.
    Taken from: https://github.com/sphinx-doc/sphinx/issues/1514#issuecomment-742703082
 */
-.sig-param::before {
+/* .sig-param::before {
     content: "\a\20\20\20\20\20\20";
     white-space: pre;
 }
@@ -24,4 +24,4 @@ dt em.sig-param:last-of-type::after {
 
 dl.class > dt:first-of-type {
     display: block !important;
-}
+} */
